Thu Sep 12 16:47:24 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(pfinet): Omit special dependency.

	* Makefile (vpath %.c): Put this after Makeconf inclusion so it
	catches setting of $(srcdir) there.

Fri Sep  6 16:46:43 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* socket-ops.c (S_socket_recv): Bother to pass
	USER->sock->userflags through to the recvfrom routine.

Sat Jul 20 15:48:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (lndist-asm-files): Look for files in $(srcdir).
	(lndist-linux-files): Likewise.
	(lndist-linux-inet-files): Likewise.

Fri Jul 19 09:39:08 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pfinet.h (make_sock_user): Declaration updated.

Thu Jul 18 23:19:07 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* misc.c (make_sock_user): New parm `noinstall'; if it's set use
	non-installing version of ports_create_port.  All callers
	changed. 
	* io-ops.c (S_io_reauthenticate): Install NEWUSER port right into
	portset after it's fully initialized.

Sat Jul 13 20:18:18 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-ops.c (S_io_reauthenticate): Repeat auth_server_authenticate
 	for as long as we get EINTR.  Deal with other errors without
 	crashing.

Sun Jul  7 21:29:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-ops.c (S_io_reauthenticate): Don't use unsafe MOVE_SEND in
 	call to auth_server_authenticate.

Fri Jul  5 19:42:54 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ethernet.c (setup_ethernet_device): Linux's device `mtu' member
 	does not include the hardware header size; subtract that off the
 	value the kernel specifies as maximum packet size in setting
 	ETHER_DEV.mtu.

Thu Jun 27 10:14:10 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (lndist): Add lndist-asm-files.
	(lndist-asm-files): New rule.
	(ASMHEADERS): New variable.
	($(top_srcdir)/hurd-snap/$(dir)/asm): New rule.
