@@ -26,7 +26,7 @@ LINUXSRCS= af_inet.c arp.c datagram.c dev.c dev_mcast.c devinet.c eth.c \
 	tcp.c timer.c udp.c utils.c
 UNUSEDSRC = packet.c ipx.c ip_fw.c p8022.c p8023.c pe2.c psnap.c rarp.c
 SRCS = sched.c timer-emul.c devices.c socket.c main.c ethernet.c \
-	io-ops.c socket-ops.c misc.c time.c options.c
+	io-ops.c socket-ops.c misc.c time.c options.c loopback.c
 MIGSRCS = ioServer.c socketServer.c startup_notifyServer.c
 OBJS= $(subst .c,.o,$(LINUXSRCS) $(SRCS) $(MIGSRCS))
 LCLHDRS= config.h mapped-time.h mutations.h pfinet.h
